footer feature added-second commit

--- a/index.html
+++ b/index.html
@@ -22,29 +22,66 @@
         <h1 class="headings" id="mainHeading">Welcome To Nike!!</h1>
         <hr id="heading1Line"/>
 
-         <!-- Shoes Section-->
-         <section class="shoes-Main" id="shoes">
-            <div class="container">
-                <!-- Shoes main Heading-->
-                <h2 class="headings">Our top Sellers</h2>
-                    <!-- Shoe Grid Items-->
-                <div class="row justify-content-center">
-                    <!-- Shoe Item 1-->
-                    <div>
-                        <div class="Shoe items" data-bs-toggle="modal" data-bs-target="#shoeModal1">
-                            <img class="img-Shoe" src="assets/img/portfolio/chap05.png" alt="..." />
-                        </div>
-                    </div>
+<!--Normal Page Code-->
+            <div class="grid-container">
+                <!--item1-->
+                <div class="grid-item" id="item1-Norm">
+                    <h2 class="item-headings">Air Force 1's</h2>
+                    <img src="Assets/nike1.jfif" alt="Item1" height="600px" width="600px">
+                    <a href="#item1" class="more-info-Btn">More info</a>
+                </div>
+                <!--item2-->
+                <div class="grid-item" id="item1">2</div>
+                <!--item3-->
+                <div class="grid-item" id="item1">3</div>
+                <!--item4-->
+                <div class="grid-item" id="item1">4</div>
+                <!--item5-->
+                <div class="grid-item" id="item1">5</div>
+                <!--item6-->
+                <div class="grid-item" id="item1">6</div>
+            </div>
 
 
+             <!--Popup Code1-->
+             <div class="popup" id="item1">
+                <div class="popup-content">
+                    <img src="Assets/nike1.jfif" alt="Item1" height="600px" width="600px">
+                    <a href="#" class="close">x</a>
+                </div>
+            </div>
+        </div>
 
-
-
-
-    </div>
-
-
-
+        <!--Footer Section-->
+        <div class="footer-Container">
+            <div class="footer">
+                <div class="footer-Heading Footer-1">
+                    <h2>About us</h2>
+                    <a href="#">Customers</a>
+                    <a href="#">Investors</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+                <div class="footer-Heading Footer-2">
+                    <h2>Contact us</h2>
+                    <a href="#">Jobs</a>
+                    <a href="#">Support</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Sponsorships</a>
+                </div>
+                <div class="footer-Heading Footer-3">
+                    <h2>Social Media</h2>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Youtube</a>
+                </div>
+                <div class="footer-email-form">
+                    <h2>Join our newsletter</h2>
+                    <input type="email" placeholder="Enter your email addres" id="footer-email">
+                    <input type="submit" value="Sign Up" id="footer-email-Btn">
+                </div>
+            </div>
+        </div>
 
 
     <script src='Js/index.js'></script>
