--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">Jordan 3 Racer Blue Retro's</div>
                 <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                <div>1 colour</div>
             </div>
         </div>
     </div>
@@ -54,6 +55,7 @@
             <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">Jordan 4 Oreo's</div>
                 <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                <div>1 colour</div>
             </div>
         </div>
     </div>
@@ -69,6 +71,7 @@
             <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">Jordan 5 Bel Air's</div>
                 <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                <div>1 colour</div>
             </div>
         </div>
     </div>
@@ -82,8 +85,9 @@
                 <img class="img-fluid" src="assets/img/nike5.jpg" alt="..." />
             </a>
             <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 7 </div>
-                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                <div class="portfolio-caption-heading">Jordan 6 Retro Travis Scott</div>
+                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                <div>1 colour</div>
             </div>
         </div>
     </div>
@@ -97,8 +101,9 @@
                 <img class="img-fluid" src="assets/img/nike6.jpg" alt="..." />
             </a>
             <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 13 </div>
-                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                <div class="portfolio-caption-heading">Jordan 13 Retro He Got Game</div>
+                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                <div>1 colour</div>
             </div>
         </div>
     </div>
