--- a/about section.html
+++ b/about section.html
@@ -24,7 +24,7 @@
 <br><br>
 
     <div class="about-section 2">
-        <h1>About Nike South Africa</h1>
+        <h1>About Nike South Africa:</h1>
         <p>Our mission is what drives us to do everything possible to expand human potential. 
             We do that by creating groundbreaking sport innovations, by making our products more sustainably, 
             by building a creative and diverse global team and by making a positive impact in communities where we live and work</p>
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="/w3images/team1.jpg" alt="Thlokomelo" style="width:100%">
+            <img src="Images/BR.jpg" alt="Thlokomelo" style="width:100%">
             <div class="container">
               <h2>Thlokomelo</h2>
               <p class="title">Managing Director</p>
@@ -48,11 +48,11 @@
       
         <div class="column">
           <div class="card">
-            <img src="/w3images/team2.jpg" alt="Brent" style="width:100%">
+            <img src="Images/BR.jpg" alt="Brent" style="width:100%">
             <div class="container">
               <h2>Brent</h2>
               <p class="title">Creative Director</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>XXXXXX.</p>
               <p>brent@gmail.com</p>
             </div>
           </div>
@@ -61,11 +61,11 @@
         <div class="row">
             <div class="column">
               <div class="card">
-                <img src="/w3images/team1.jpg" alt="Dyllin" style="width:100%">
+                <img src="Images/BR.jpg" alt="Dyllin" style="width:100%">
                 <div class="container">
                   <h2>Dyllin</h2>
                   <p class="title">Designer</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>XXXXX.</p>
                   <p>dyllin@gmail.com</p>
                 </div>
               </div>
@@ -73,11 +73,11 @@
           
             <div class="column">
               <div class="card">
-                <img src="/w3images/team2.jpg" alt="Kgoro" style="width:100%">
+                <img src="Images/BR.jpg" alt="Kgoro" style="width:100%">
                 <div class="container">
                   <h2>Kgoro</h2>
                   <p class="title">Marketing and Sales</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>XXXXX.</p>
                   <p>kgoro@gmail.com</p>
                 </div>
               </div>
