--- a/about section.html
+++ b/about section.html
@@ -21,7 +21,6 @@
 
         <p>Based in all nine South African provinces, NIKE, Inc. includes the Nike and Jordan brands.</p>
       </div>
-<br><br>
 
     <div class="about-section 2">
         <h1>About Nike South Africa:</h1>
@@ -36,11 +35,10 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="Images/BR.jpg" alt="Thlokomelo" style="width:100%">
+            <img src="Images/Female exec.jpg" alt="Thlokomelo" style="width:100%">
             <div class="container">
               <h2>Thlokomelo</h2>
               <p class="title">Managing Director</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
               <p>thlokomelo@gmail.com</p>
             </div>
           </div>
@@ -48,11 +46,10 @@
       
         <div class="column">
           <div class="card">
-            <img src="Images/BR.jpg" alt="Brent" style="width:100%">
+            <img src="Images/exec 3.jpg" alt="Brent" style="width: 100%;">
             <div class="container">
               <h2>Brent</h2>
               <p class="title">Creative Director</p>
-              <p>XXXXXX.</p>
               <p>brent@gmail.com</p>
             </div>
           </div>
@@ -61,11 +58,10 @@
         <div class="row">
             <div class="column">
               <div class="card">
-                <img src="Images/BR.jpg" alt="Dyllin" style="width:100%">
+                <img src="Images/exec 2.jpg" alt="Dyllin" style="width:100%">
                 <div class="container">
                   <h2>Dyllin</h2>
                   <p class="title">Designer</p>
-                  <p>XXXXX.</p>
                   <p>dyllin@gmail.com</p>
                 </div>
               </div>
@@ -73,11 +69,10 @@
           
             <div class="column">
               <div class="card">
-                <img src="Images/BR.jpg" alt="Kgoro" style="width:100%">
+                <img src="Images/male exec.jpg.crdownload" alt="Kgoro" style="width:100%">
                 <div class="container">
                   <h2>Kgoro</h2>
                   <p class="title">Marketing and Sales</p>
-                  <p>XXXXX.</p>
                   <p>kgoro@gmail.com</p>
                 </div>
               </div>
