--- a/index.html
+++ b/index.html
@@ -10,103 +10,112 @@
 </head>
 
 <body>
-    <div class="portfolio-item">
-        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+    <section class="page-section bg-light" id="portfolio">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase"> My Portfolio</h2>
+                <h3 class="section-subheading text-muted">Here are the projects I have worked on.</h3>
             </div>
-            <img class="img-fluid" src="assets/img/nike1.jpg" alt="..." />
-        </a>
-        <div class="portfolio-caption">
-            <div class="portfolio-caption-heading">Jordan 1 Union</div>
-            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-            <div>1 colour</div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Nike item 1-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike1.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 1 Union</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
 
-        </div>
-    </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4">
-        <!-- Nike item 2-->
-        <div class="portfolio-item">
-            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                <div class="portfolio-hover">
-                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                    </div>
                 </div>
-                <img class="img-fluid" src="assets/img/nike2.jpg" alt="..." />
-            </a>
-            <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 3 Racer Blue Retro's</div>
-                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-                <div>1 colour</div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Nike item 2-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike2.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 3 Racer Blue Retro's</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Nike item 3-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike3.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 4 Oreo's</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <!-- Nike item 4-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike4.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 5 olympic gold medal</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                    <!-- Nike item 5-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike5.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 6 Retro Travis Scott</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <!-- Nike item 6-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/nike6.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Jordan 13 Retro He Got Game</div>
+                            <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
+                            <div>1 colour</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4">
-        <!-- Nike item 3-->
-        <div class="portfolio-item">
-            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                <div class="portfolio-hover">
-                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                </div>
-                <img class="img-fluid" src="assets/img/nike3.jpg" alt="..." />
-            </a>
-            <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 4 Oreo's</div>
-                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-                <div>1 colour</div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-        <!-- Nike item 4-->
-        <div class="portfolio-item">
-            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                <div class="portfolio-hover">
-                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                </div>
-                <img class="img-fluid" src="assets/img/nike4.jpg" alt="..." />
-            </a>
-            <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 5 olympic gold medal</div>
-                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-                <div>1 colour</div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-        <!-- Nike item 5-->
-        <div class="portfolio-item">
-            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                <div class="portfolio-hover">
-                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                </div>
-                <img class="img-fluid" src="assets/img/nike5.jpg" alt="..." />
-            </a>
-            <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 6 Retro Travis Scott</div>
-                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-                <div>1 colour</div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-4 col-sm-6">
-        <!-- Nike item 6-->
-        <div class="portfolio-item">
-            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                <div class="portfolio-hover">
-                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                </div>
-                <img class="img-fluid" src="assets/img/nike6.jpg" alt="..." />
-            </a>
-            <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Jordan 13 Retro He Got Game</div>
-                <div class="portfolio-caption-subheading text-muted">Men's Shoes</div>
-                <div>1 colour</div>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
     </section>
 
     <!-- Portfolio Modals-->
@@ -371,7 +380,7 @@
                                     </li>
                                     <li>
                                         <strong>colour</strong>
-                                     <strong>red,black and white</strong>
+                                        <strong>red,black and white</strong>
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
@@ -386,7 +395,6 @@
             </div>
         </div>
     </div>
-
     <script src='nike shop.js'></script>
 </body>
 
