--- a/about section.html
+++ b/about section.html
@@ -69,7 +69,7 @@
           
             <div class="column">
               <div class="card">
-                <img src="Images/male exec.jpg.crdownload" alt="Kgoro" style="width:100%">
+                <img src="Images/exec 5.jpg" alt="Kgoro" style="width:100%">
                 <div class="container">
                   <h2>Kgoro</h2>
                   <p class="title">Marketing and Sales</p>
