--- a/pages/nikeescape.html
+++ b/pages/nikeescape.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="topNav">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
             <a style="float:left" href="#men">Men</a>
