--- a/pages/womenshoes.html
+++ b/pages/womenshoes.html
@@ -11,7 +11,7 @@
 <body>
     <!--Top NavBar-->
     <div class="topNav">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
             <a style="float:left" href="#men">Men</a>
