brent and dyllan combined, second commit

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Nike</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/index.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./pages/css/index.css'>
     
 </head>
 <body>
     <!--Top NavBar-->
     <div class="topNav" id="navbar">
-        <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+        <a class="active" href="index.html">Home</a>
+            <a href="contact form.html">Contact</a>
+            <a href="about section.html">About</a>
             <a style="float:left" href="#men">Men</a>
-            <a style="float:left" href="#women">Women</a>
+            <a style="float:left" href="./womenshoes.html">Women</a>
     </div>
     <!--Main Body Start-->
     <div id="mainBody">
@@ -30,7 +30,7 @@
 
             <div class="image-container">
                <!--item1-->
-                <div class="image"><a href="#popup-content-1"><img src="pages/assets/1.jfif" alt=""></a></div>
+                <div class="image"><a href="#popup-content-1"><img src="pages/assets/nikedownshifter.jfif" alt=""></a></div>
                 <!--item2-->
                 <div class="image"><a href="#popup-content-2"><img src="pages/assets/airzoompegasus.jfif" alt=""></a></div>
                 <!--item3-->
@@ -55,10 +55,10 @@
 
             <div class="popup" id="popup-content-1">
                 <div class="popup-content">
-                    <h1 class="popup-content-h1">Airzoompegasus</h1>
-                    <img src="pages/assets/1.jfif" alt="">
+                    <h1 class="popup-content-h1">Downshifter</h1>
+                    <img src="pages/assets/nikedownshifter.jfif" alt="">
                     <a href="#" class="close">x</a>
-                    <a href="#" class="ext-link">Go to this shoe</a>
+                    <a href="./downshifter.html" class="ext-link">Go to this shoe</a>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     <h1 class="popup-content-h1">Airzoompegasus</h1>
                     <img src="pages/assets/airzoompegasus.jfif" alt="">
                     <a href="#" class="close">x</a>
-                    <a href="#" class="ext-link">Go to this shoe</a>
+                    <a href="./airzoompegasus.html" class="ext-link">Go to this shoe</a>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                     <h1 class="popup-content-h1">Maxplus</h1>
                     <img src="pages/assets/maxPlus.jfif" alt="">
                     <a href="#" class="close">x</a>
-                    <a href="#" class="ext-link">Go to this shoe</a>
+                    <a href="./pages/" class="ext-link">Go to this shoe</a>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     <h1 class="popup-content-h1">React EscapeRun</h1>
                     <img src="pages/assets/NikeReactEscapeRun.jfif" alt="">
                     <a href="#" class="close">x</a>
-                    <a href="#" class="ext-link">Go to this shoe</a>
+                    <a href="./nikeescape.html" class="ext-link">Go to this shoe</a>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                     <h1 class="popup-content-h1">Quest 4 Road</h1>
                     <img src="pages/assets/quest4road.jfif" alt="">
                     <a href="#" class="close">x</a>
-                    <a href="#" class="ext-link">Go to this shoe</a>
+                    <a href="./quest.html" class="ext-link">Go to this shoe</a>
                 </div>
             </div>
 
@@ -176,6 +176,6 @@
         </div>
 
 
-        <script src='Js/index.js'></script>
+        <script src='./pages/js/index.js'></script>
 </body>
 </html>
