--- a/quest.html
+++ b/quest.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='Css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -32,8 +32,8 @@
                         <div class="p1"><p>Out of Stock</p></div>
                     </div>
                 </div>
-                    <img class="photo-fluid" src="Assets/quest4road.jfif" alt="..."/>
-                    <img class="photo-fluid" src="Assets/quest-4-road-running-shoes-bkdVvs.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//quest4road.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//quest-4-road-running-shoes-bkdVvs.png" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
