--- a/womenshoes.html
+++ b/womenshoes.html
@@ -31,7 +31,7 @@
                      <p>Air Zoom Pegasus</p>
                         </div>
                          </div>
-                          <img class="foto-fluid" src="Assets/airzoompegasus.jfif" alt="..." />
+                          <img class="foto-fluid" src="pages/assets/airzoompegasus.jfif" alt="..." />
                            </a>
                             </div>
                   
@@ -42,7 +42,7 @@
                       <p>Nike React Escape Run</p>
                         </div>
                          </div>
-                          <img class="foto-fluid" src="Assets/NikeReactEscapeRun.jfif" alt="..." height="600" width="400"/>
+                          <img class="foto-fluid" src="pages/assets//NikeReactEscapeRun.jfif" alt="..." height="600" width="400"/>
                            </a>
                            </div>
 
@@ -53,7 +53,7 @@
                                          <p>Quest 4 Road </p>
                                                </div>
                                                 </div>
-                                                  <img class="foto-fluid" src="Assets/quest4road.jfif" alt="..." height="600" width="400"/>
+                                                  <img class="foto-fluid" src="pages/assets//quest4road.jfif" alt="..." height="600" width="400"/>
                                                    </a>
                                                    </div>
 
@@ -65,7 +65,7 @@
                                               <p>Nike DownShifter</p>
                                                     </div>
                                                      </div>
-                                                       <img class="foto-fluid" src="Assets/nikedownshifter.jfif" alt="..." height="600" width="400"/>
+                                                       <img class="foto-fluid" src="pages/assets//nikedownshifter.jfif" alt="..." height="600" width="400"/>
                                                         </a>
                                                         </div>
 
