--- a/nikeescape.html
+++ b/nikeescape.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='Css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -35,8 +35,8 @@
                              This one's got deluxe details that add a spark of colour to your run.</p></div>
                     </div>
                 </div>
-                    <img class="photo-fluid" src="Assets/NikeReactEscapeRun.jfif" alt="..."/>
-                    <img class="photo-fluid" src="Assets/react-escape-run-road-running-shoes-zNqfV6.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//NikeReactEscapeRun.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//react-escape-run-road-running-shoes-zNqfV6.png" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
