--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='nike shop.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='websites/nike.css'>
 </head>
 
 <body>
+
     <section class="page-section bg-light" id="portfolio">
-        <div class="container">
+        <div class="grid container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase"> My Portfolio</h2>
-                <h3 class="section-subheading text-muted">Here are the projects I have worked on.</h3>
+                <h2 class="section-heading text-uppercase"> Air Jordan</h2>
+                <h3 class="section-subheading text-muted">New Release's</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Nike item 1-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
@@ -35,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Nike item 2-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
@@ -51,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Nike item 3-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
@@ -67,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                    <!-- Nike item 4-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
                             <div class="portfolio-hover">
@@ -83,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                    <!-- Nike item 5-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
                             <div class="portfolio-hover">
@@ -99,7 +100,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <!-- Nike item 6-->
+
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
                             <div class="portfolio-hover">
@@ -115,6 +116,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -395,7 +397,7 @@
             </div>
         </div>
     </div>
-    <script src='nike shop.js'></script>
+    <script src='websites/nike.js'></script>
 </body>
 
 </html>
