Folder structure for assets

--- a/about section.html
+++ b/about section.html
@@ -48,7 +48,7 @@ body {
   .our-mission{
     padding: 50px;
     text-align: center;
-    background-image: url(Assets/mission\ 1.jpg);
+    background-image: url(pages/Assets/mission\ 1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -122,7 +122,7 @@ body {
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="Assets/Female exec.jpg" alt="Thlokomelo" style="width:100%">
+            <img src="pages/Assets/Female exec.jpg" alt="Thlokomelo" style="width:100%">
             <div class="container">
               <h2>Thlokomelo</h2>
               <p class="title">Managing Director</p>
@@ -133,7 +133,7 @@ body {
       
         <div class="column">
           <div class="card">
-            <img src="Assets/exec 3.jpg" alt="Brent" style="width: 100%;">
+            <img src="pages/Assets/exec 3.jpg" alt="Brent" style="width: 100%;">
             <div class="container">
               <h2>Brent</h2>
               <p class="title">Creative Director</p>
@@ -145,7 +145,7 @@ body {
         <div class="row">
             <div class="column">
               <div class="card">
-                <img src="Assets/exec 2.jpg" alt="Dyllin" style="width:100%">
+                <img src="pages/Assets/exec 2.jpg" alt="Dyllin" style="width:100%">
                 <div class="container">
                   <h2>Dyllin</h2>
                   <p class="title">Designer</p>
@@ -156,7 +156,7 @@ body {
           
             <div class="column">
               <div class="card">
-                <img src="Assets/Kgoro Image.jpg" alt="Kgoro" style="width:100%">
+                <img src="pages/Assets/Kgoro Image.jpg" alt="Kgoro" style="width:100%">
                 <div class="container">
                   <h2>Kgoro</h2>
                   <p class="title">Marketing and Sales</p>
