--- a/jordan-site.html
+++ b/jordan-site.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='websites/nike.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='pages/css/nike.css'>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike1.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike1.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 1 Union</div>
@@ -42,7 +42,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike2.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike2.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 3 Racer Blue Retro's</div>
@@ -58,7 +58,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike3.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike3.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 4 Oreo's</div>
@@ -74,7 +74,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike4.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike4.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 5 olympic gold medal</div>
@@ -90,7 +90,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike5.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike5.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 6 Retro Travis Scott</div>
@@ -106,7 +106,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/nike6.jpg" alt="..." />
+                            <img class="img-fluid" src="pages/assets/nike6.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Jordan 13 Retro He Got Game</div>
@@ -125,7 +125,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike1.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike1.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -134,7 +134,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 1 Union</h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/nike13.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/nike13.jpg" alt="..." />
                                 <p>Supplied by a premier sneaker marketplace dealing with unworn, already sold out, in
                                     demand rarities. Each product is rigorously inspected by experienced experts
                                     guaranteeing authenticity. The Union x Air Jordan 1 "Storm Blue" is one of two
@@ -173,7 +173,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike2.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike2.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -182,7 +182,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 3 Racer Blue Retro's </h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/nike12.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/nike12.jpg" alt="..." />
                                 <p>Supplied by a premier sneaker marketplace dealing with unworn, already sold out, in
                                     demand rarities. Each product is rigorously inspected by experienced experts
                                     guaranteeing authenticity. The Air Jordan 3 “UNC” is a Carolina-blue-based colorway
@@ -221,7 +221,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike3.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike3.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -230,7 +230,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 4 Oreo's</h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/nike11.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/nike11.jpg" alt="..." />
                                 <p>Combining the silhouette's "Oreo" and "White/Cement" colourways, the Air Jordan 4
                                     Retro "White Oreo" sneakers boast a monochrome design. Speckled grey detailing
                                     appears alongside the pair's white "wings" whilst the Jumpman motif stands out in a
@@ -261,7 +261,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike4.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike4.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -270,7 +270,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 5 OGM</h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/NIKE14.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/NIKE14.jpg" alt="..." />
                                 <p>Supplied by a premier sneaker marketplace dealing with unworn, already sold out, in
                                     demand rarities. Each product is rigorously inspected by experienced experts
                                     guaranteeing authenticity. Released in celebration of the summer Olympics of 2016,
@@ -304,7 +304,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike5.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike5.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -313,7 +313,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 6 Retro Travis Scott </h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/nike15.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/nike15.jpg" alt="..." />
                                 <p>Supplied by a premier sneaker marketplace dealing with unworn, already sold out, in
                                     demand rarities. Each product is rigorously inspected by experienced experts
                                     guaranteeing authenticity. The Travis Scott x Air Jordan 6 marks the third time the
@@ -352,7 +352,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/nike6.jpg" alt="Close modal" />
+                <div class="close-modal" data-bs-dismiss="modal"><img src="pages/assets/nike6.jpg" alt="Close modal" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
@@ -361,7 +361,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Jordan 13 Retro He Got Game</h2>
                                 <p class="item-intro text-muted">Men's Shoes</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/nike16.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="pages/assets/nike16.jpg" alt="..." />
                                 <p>
                                     Supplied by a premier sneaker marketplace dealing with unworn, already sold out, in
                                     demand rarities. Each product is rigorously inspected by experienced experts
@@ -397,7 +397,7 @@
             </div>
         </div>
     </div>
-    <script src='websites/nike.js'></script>
+    <script src='pages/js/nike.js'></script>
 </body>
 
 </html>
