added websites and different folder structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="active" href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
-            <a style="float:left" href="#men">Men</a>
+            <a style="float:left" href="./jordan-site.html">Men</a>
             <a style="float:left" href="./womenshoes.html">Women</a>
     </div>
     <!--Main Body Start-->
