--- a/quest.html
+++ b/quest.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="topNav">
-        <a href="./index.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
             <a style="float:left" href="#men">Men</a>
@@ -32,8 +32,8 @@
                         <div class="p1"><p>Out of Stock</p></div>
                     </div>
                 </div>
-                    <img class="photo-fluid" src="./pages/assets/quest4road.jfif" alt="..."/>
-                    <img class="photo-fluid" src="./pages/assets/quest-4-road-running-shoes-bkdVvs.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//quest4road.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//quest-4-road-running-shoes-bkdVvs.png" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
