--- a/womenshoes.html
+++ b/womenshoes.html
@@ -6,7 +6,7 @@
     <title>Nike shoe list</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./pages/css/style.css'>
-    <script src='nike/index.html'></script>
+    <script src='index.js'></script>
 </head>
 <body>
     <!--Top NavBar-->
@@ -14,8 +14,8 @@
         <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
-            <a style="float:left" href="#men">Men</a>
-            <a class ="active" style="float:left" href="./womenshoes.html">Women</a>
+            <a style="float:left" href="./jordan-site.html">Men</a>
+            <a class ="active" style="float:left" href="#women">Women</a>
     </div>
 
 <div class="container">
@@ -31,7 +31,7 @@
                      <p>Air Zoom Pegasus</p>
                         </div>
                          </div>
-                          <img class="foto-fluid" src="./pages/assets/airzoompegasus.jfif" alt="..." />
+                          <img class="foto-fluid" src="pages/assets/airzoompegasus.jfif" alt="..." />
                            </a>
                             </div>
                   
@@ -42,7 +42,7 @@
                       <p>Nike React Escape Run</p>
                         </div>
                          </div>
-                          <img class="foto-fluid" src="./pages/assets/NikeReactEscapeRun.jfif" alt="..." height="600" width="400"/>
+                          <img class="foto-fluid" src="pages/assets//NikeReactEscapeRun.jfif" alt="..." height="600" width="400"/>
                            </a>
                            </div>
 
@@ -53,7 +53,7 @@
                                          <p>Quest 4 Road </p>
                                                </div>
                                                 </div>
-                                                  <img class="foto-fluid" src="./pages/assets/quest4road.jfif" alt="..." height="600" width="400"/>
+                                                  <img class="foto-fluid" src="pages/assets//quest4road.jfif" alt="..." height="600" width="400"/>
                                                    </a>
                                                    </div>
 
@@ -65,7 +65,7 @@
                                               <p>Nike DownShifter</p>
                                                     </div>
                                                      </div>
-                                                       <img class="foto-fluid" src="./pages/assets/nikedownshifter.jfif" alt="..." height="600" width="400"/>
+                                                       <img class="foto-fluid" src="pages/assets//nikedownshifter.jfif" alt="..." height="600" width="400"/>
                                                         </a>
                                                         </div>
 
