--- a/airzoompegasus.html
+++ b/airzoompegasus.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="topNav">
-        <a href="./index.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
-            <a style="float:left" href="#men">Men</a>
+            <a style="float:left" href="./jordan-site.html">Men</a>
             <a class ="active" style="float:left" href="womenshoes.html">Women</a>
     </div>
 
@@ -37,8 +37,8 @@
                             Breathable mesh in the upper combines the comfort and durability you want with a wider fit at the toes.</p></div>
                     </div>
                 </div>
-                    <img class="photo-fluid" src="./pages/assets/airzoompegasus2.png" alt="..."/>
-                    <img class="photo-fluid" src="./pages/assets/airzoompegasus3.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//airzoompegasus2.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//airzoompegasus3.jfif" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
