--- a/downshifter.html
+++ b/downshifter.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="topNav">
-        <a href="./index.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
-            <a style="float:left" href="#men">Men</a>
+            <a style="float:left" href="./jordan-site.html">Men</a>
             <a class ="active" style="float:left" href="womenshoes.html">Women</a>
     </div>
 
@@ -34,8 +34,8 @@
                     
                     </div>
                 </div>
-                    <img class="photo-fluid" src="./pages/assets/nikedownshifter.jfif" alt="..."/>
-                    <img class="photo-fluid" src="./pages/assets/nikedownshifter2.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//nikedownshifter.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//nikedownshifter2.png" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
