--- a/nikeescape.html
+++ b/nikeescape.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="topNav">
-        <a href="./index.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="contact form.html">Contact</a>
             <a href="about section.html">About</a>
-            <a style="float:left" href="#men">Men</a>
+            <a style="float:left" href="./jordan-site.html">Men</a>
             <a class ="active" style="float:left" href="womenshoes.html">Women</a>
     </div>
 
@@ -35,8 +35,8 @@
                              This one's got deluxe details that add a spark of colour to your run.</p></div>
                     </div>
                 </div>
-                    <img class="photo-fluid" src="./pages/assets/NikeReactEscapeRun.jfif" alt="..."/>
-                    <img class="photo-fluid" src="./pages/assets/react-escape-run-road-running-shoes-zNqfV6.png" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//NikeReactEscapeRun.jfif" alt="..."/>
+                    <img class="photo-fluid" src="pages/assets//react-escape-run-road-running-shoes-zNqfV6.png" alt="..."/>
                 </a>
             <p><strong>Sizes</strong></p>
             <select name="sizes">
