fixed the navbar

--- a/contact form.html
+++ b/contact form.html
@@ -102,8 +102,8 @@
   <body>
      <!--Top NavBar-->
      <div class="topNav" id="navbar">
-      <a class="active" href="index.html">Home</a>
-          <a href="contact form.html">Contact</a>
+      <a href="index.html">Home</a>
+          <a class="active" href="contact form.html">Contact</a>
           <a href="about section.html">About</a>
           <a style="float:left" href="jordan-site.html">Men</a>
           <a style="float:left" href="./womenshoes.html">Women</a>
