--- a/about section.html
+++ b/about section.html
@@ -97,9 +97,9 @@ body {
 <body>
    <!--Top NavBar-->
    <div class="topNav" id="navbar">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
         <a href="contact form.html">Contact</a>
-        <a href="about section.html">About</a>
+        <a class="active" href="about section.html">About</a>
         <a style="float:left" href="./jordan-site.html">Men</a>
         <a style="float:left" href="./womenshoes.html">Women</a>
 </div>
